# tt2019

./: CMakeLists.txt  Makefile  lambdas.cpp  parser_testing.cpp  task0.cpp  task0_testing.cpp  task2.cpp  vis.cpp
include/: lambdas.h
